samples/_failures_safe/1761612850_886488_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ccdb2cca.c: In function ‘evaluate_expression’:
./samples/SAFE/__tmp_ccdb2cca.c:170:1: error: expected declaration or statement at end of input
  170 | int evaluate_expression(const char* input) {
      | ^~~
